--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-ejs-layouts": "^2.5.0",
+    "moment": "^2.22.2",
     "mongodb": "^3.1.9",
     "mongoose": "^5.3.12"
   },
