--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "npm install -D nodemon",
+    // "start": "npm install -D nodemon",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
